still trying to fix card flip on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,6 +493,7 @@ footer {
         padding-right:1%;
         padding-left: 1%;
         padding-bottom: 5px;
+        backface-visibility: hidden;
     }
     
 .card__details.li {
